# automata-background

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/game/: mod.rs  world.rs
src/renderer/: layeredwindow.rs  mod.rs  shader.wgsl  window.rs
